Fix how trick and deck look together on mobile

--- a/src/components/GamePage/Gui/HandView/style.scss
+++ b/src/components/GamePage/Gui/HandView/style.scss
@@ -31,7 +31,7 @@
             height: 208px;
             box-sizing: border-box;
             border-radius: 10px;
-            box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.05);
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
             background-color: white;
             background-image: url('../sprite.jpg');
             background-position: inherit;
